--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag img_aug_app:$(date +%s)
+      run: docker build ./app --file Dockerfile --tag img_aug_app:$(date +%s)
