--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run:
+      run: |
         cd app
         docker build . --file Dockerfile --tag img_aug_app:$(date +%s)
