--- a/.github/workflows/azure_deploy.yml
+++ b/.github/workflows/azure_deploy.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        cd app
         pip install -r requirements.txt
     
     - name: test with PyTest
